--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-awesome-modal": "^2.0.5",
     "react-dom": "^16.8.6",
     "react-draft-wysiwyg": "^1.13.2",
+    "react-icons": "^3.8.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.0.0",
     "react-whirligig": "^6.5.12",
