--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "axios": "^0.18.1",
     "bootstrap": "^4.3.1",
     "draft-js": "^0.10.5",
+    "draftjs-to-html": "^0.9.1",
+    "html-to-draftjs": "^1.5.0",
     "react": "^16.8.6",
     "react-animated-slider": "^1.1.4",
     "react-awesome-modal": "^2.0.5",
@@ -13,7 +15,7 @@
     "react-draft-wysiwyg": "^1.13.2",
     "react-icons": "^3.8.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^3.0.0",
+    "react-scripts": "^3.3.0",
     "react-whirligig": "^6.5.12",
     "react-youtube": "^7.9.0"
   },
