--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tinymce/tinymce-react": "^3.4.0",
     "axios": "^0.18.1",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.1",
     "draft-js": "^0.11.4",
+    "jquery": "^3.4.1",
     "react": "^16.8.6",
     "react-animated-slider": "^1.1.4",
     "react-awesome-modal": "^2.0.5",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.8.6",
     "react-draft-wysiwyg": "^1.13.2",
     "react-icons": "^3.8.0",
