--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.8.6",
     "react-draft-wysiwyg": "^1.13.2",
+    "react-filtered-multiselect": "^0.5.1",
     "react-icons": "^3.8.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.3.0",
+    "react-select": "^3.0.8",
     "react-whirligig": "^6.5.12",
     "react-youtube": "^7.9.0"
   },
