--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-animated-slider": "^1.1.4",
     "react-awesome-modal": "^2.0.5",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-datepicker": "^2.12.1",
     "react-dom": "^16.8.6",
     "react-draft-wysiwyg": "^1.13.2",
     "react-filtered-multiselect": "^0.5.1",
