--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-animated-slider": "^1.1.4",
     "react-awesome-modal": "^2.0.5",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-data-table-component": "^6.3.0",
     "react-datepicker": "^2.12.1",
     "react-dom": "^16.8.6",
     "react-draft-wysiwyg": "^1.13.2",
@@ -21,7 +22,8 @@
     "react-scripts": "^3.3.0",
     "react-select": "^3.0.8",
     "react-whirligig": "^6.5.12",
-    "react-youtube": "^7.9.0"
+    "react-youtube": "^7.9.0",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
