--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-filtered-multiselect": "^0.5.1",
     "react-icons": "^3.8.0",
     "react-router-dom": "^4.3.1",
+    "react-sanfona": "^1.5.0",
     "react-scripts": "^3.3.0",
     "react-select": "^3.0.8",
     "react-whirligig": "^6.5.12",
