--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-sanfona": "^1.5.0",
     "react-scripts": "^3.3.0",
     "react-select": "^3.0.8",
+    "react-stripe-checkout": "^2.6.3",
     "react-whirligig": "^6.5.12",
     "react-youtube": "^7.9.0",
     "styled-components": "^5.0.1"
